<resources>
    <string name="app_name">Android</string>
    <string name="btn_Imbtn">나는 버튼</string>
    <string name="hello">Hello \n Nice to meet you</string>
    <string name="hello_world">Hello World!</string>
    <string name="hint">Name</string>
    <string name="text_view">TextView</string>
    <string name="button">Button</string>
    <string name="apple">사과</string>
    <string name="banana">바나나</string>
    <string name="orange">오렌지</string>
    <string name="Switch">switch</string>
    <string name="off">Off</string>
    <string name="downloading" translatable="false">DownLoading...</string>
    <string name="success">다운로드성공</string>
    <string name="zero">0</string>
    <string name="zero2">0.0</string>
    <string name="main">메인 액티비티</string>
    <string name="serve">서브 액티비티</string>
    <string name="to1" translatable="false">to1</string>
    <string name="to2" translatable="false">to2</string>
    <string name="Edit">전달할 메시지를 입력하세요.</string>
    <string name="end">액티비티 닫기</string>
    <string name="select">선택 결과</string>
    <string name="recycler">RecyclerView</string>
    <string name="one">01</string>
    <string name="title">Title</string>
    <string name="title_detail">Detail</string>
    <string name="title_list">List</string>
    <string name="activity">Activity</string>
    <string name="send">send</string>
    <string name="next">NEXT</string>
    <string name="back">Back</string>
    <string name="date" translatable="false">2023-02-20</string>
    <string name="FragA">Fragment A</string>
    <string name="FragB">Fragment B</string>
    <string name="FragC">Fragment C</string>
    <string name="FragD">Fragment D</string> 
    <string name="danger">위험권한</string>
    <string name="camera">카메라</string>

</resources>
