<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckBox">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <CheckBox
            android:id="@+id/check_apple"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/apple"
            android:textSize="20sp">

        <CheckBox
            android:id="@+id/check_banana"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/banana"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <CheckBox
            android:id="@+id/check_oragne"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/orange"
            android:textSize="20sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
